# scraper-base-debian

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-image.yml
src/: main.py
src/utils/: utils.py
tests/: test_scraper.py
